Add meta name description tag

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- <meta name="MeTILDA" content="Audio Analysis Web Application for Blackfoot."> -->
+    <meta name="description" content="Audio Analysis Web Application for Blackfoot language.">
     <meta charset="utf-8">
     <link rel="canonical" href="%PUBLIC_URL%"/>
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
