--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="CKrvWXPF7v2stUfalgG9EUDGHt9IJoaN1otd73fKvA0" />
     <meta name="description" content="Audio Analysis Web Application for Blackfoot language.">
     <meta charset="utf-8">
     <link rel="canonical" href="%PUBLIC_URL%"/>
