keywords tag added

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta name="google-site-verification" content="CKrvWXPF7v2stUfalgG9EUDGHt9IJoaN1otd73fKvA0" />
-    <meta name="description" content="Audio Analysis Web Application for Blackfoot language.">
+    <meta name="description" content="Learning and Analysis Platform for Blackfoot language.">
+    <meta name="keywords" content="Audio Analysis,Blackfoot,metilda,MeTILDA,
+      Learning,Language,Documentation,Analysis">
     <meta charset="utf-8">
     <link rel="canonical" href="%PUBLIC_URL%"/>
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
