--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,6 +17,7 @@
     -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/13.3.11/Tone.min.js"></script>
     <link rel="manifest" href="/manifest.json" crossorigin="use-credentials">
+    <link rel="preconnect" href="https://www.youtube.com/" crossorigin="use-credentials">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -43,5 +44,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+   
   </body>
 </html>
